autobuy and new mulch strategies

--- a/layout.html
+++ b/layout.html
@@ -24,7 +24,7 @@
       <div class='autoClickerRow'>
          <div class='autoClickerColumn'> <input type='checkbox' id='gymAutoClicker'/> <span>Gym</span> </div>
          <div class='autoClickerColumn'> <select id='gymStrategySelect'></select> </div>
-         <div class='autoClickerColumn'> <input type='checkbox' id='gymAutoMove'/> <span>Auto Move(TODO)</span></div>
+         <div class='autoClickerColumn'> <input type='checkbox' id='gymAutoMove'/> <span title="TODO">Auto Move*</span></div>
       </div>
       <div class='autoClickerRow'>
          <div class='autoClickerColumn'> <input type='checkbox' id='bombAutoClicker'/> <span>Bombs</span> </div>
